apps/k8s/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "argo.m2.test"
      http:
        paths:
        - pathType: Prefix
          path: "/(.*)"
          backend:
            service:
              name: argocd-server
              port:
                number: 80
